Fix for SVG overflow

--- a/reset.less
+++ b/reset.less
@@ -290,6 +290,13 @@ embed {
     max-width: 100%;
 }
 /**
+ * Correct overflow not hidden in IE 9/10/11.
+ */
+
+svg:not(:root) {
+    overflow: hidden;
+}
+/**
  * Define consistent border, margin, and padding.
  */
 
